// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionTimeline Should Render 1`] = `
<div>
  <h2
    className="h2-m2oto9-0 detail_view__Title-inrqp5-1 ibbisR"
  >
    Timeline
  </h2>
  <div
    className="detail_view__ContentWrapper-inrqp5-0 iyMXGu"
    style={Object {}}
  >
    <table>
      <tbody>
        <tr>
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 bxHiTk"
          >
            <span>
              6/26/2019, 2:49:18 PM
              <span
                className="item-details"
              >
                 - 
                Refund
                 
                Success
                 - 
                No se - 
                <span>
                  € 34.70
                </span>
              </span>
            </span>
          </td>
        </tr>
        <tr>
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 bxHiTk"
          >
            <span>
              6/21/2019, 5:18:16 PM
              <span
                className="item-details"
              >
                 - 
                Authorisation
                 
                Success
                 - 
                Test Payment - 
                <span>
                  € 34.70
                </span>
              </span>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TransactionTimeline Should ommit empty reasons 1`] = `
<div>
  <h2
    className="h2-m2oto9-0 detail_view__Title-inrqp5-1 ibbisR"
  >
    Timeline
  </h2>
  <div
    className="detail_view__ContentWrapper-inrqp5-0 iyMXGu"
    style={Object {}}
  >
    <table>
      <tbody>
        <tr>
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 bxHiTk"
          >
            <span>
              6/26/2019, 2:49:18 PM
              <span
                className="item-details"
              >
                 - 
                Refund
                 
                Success
                 - 
                
                <span>
                  € 34.70
                </span>
              </span>
            </span>
          </td>
        </tr>
        <tr>
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 bxHiTk"
          >
            <span>
              6/21/2019, 5:18:16 PM
              <span
                className="item-details"
              >
                 - 
                Authorisation
                 
                Success
                 - 
                Test Payment - 
                <span>
                  € 34.70
                </span>
              </span>
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
